Refactor Length Refactored the UI code for length to be more verbose in how subscribing to the observables are handled. Refactored the length conversions to be static methods, and refactored the length toAll() methods to emit an observable. Refactored respective tests to match the changes.
TODO:
- Refactor other conversions to static methods
- Refactor other conversions to emit observable from toAll()
- Refactor other conversions for observable verbosity (onNext and onError)
- Add in other conversions
- Add comments
- Release